deployment/sidecar-injection-webhook-spec.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ziti-sidecar-injector-service
  namespace: ziti
spec:
  selector:
    app: ziti-sidecar-injector-webhook
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ziti-sidecar-injector-wh-deployment
  namespace: ziti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ziti-sidecar-injector-webhook
  template:
    metadata:
      labels:
        app: ziti-sidecar-injector-webhook
    spec:
      containers:
      - name: ziti-sidecar-injector
        image: docker.io/elblag91/ziti-agent-wh:0.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9443
        args:
          - webhook
          - --tls-cert-file
          - /home/ziggy/cert.pem
          - --tls-private-key-file 
          - /home/ziggy/key.pem
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ziti-tunnel-sidecar
webhooks:
  - name: tunnel.ziti.webhook
    admissionReviewVersions: ["v1"]
    namespaceSelector:
      matchLabels:
        openziti/ziti-tunnel: enabled
    rules:
      - operations: ["CREATE","UPDATE","DELETE"]
        apiGroups: [""]
        apiVersions: ["v1","v1beta1"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        name: ziti-sidecar-injector-service
        namespace: ziti
        port: 443
        path: "/ziti-tunnel"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdPakNDQkNLZ0F3SUJBZ0lVVHZPVnlqemFBakdnajE2bTA2cHpjcGxBMk40d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2RERUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWs1RE1SSXdFQVlEVlFRSERBbERhR0Z5Ykc5MApkR1V4RXpBUkJnTlZCQW9NQ2s1bGRFWnZkVzVrY25reEVUQVBCZ05WQkFzTUNFOXdaVzVhYVhScE1Sd3dHZ1lEClZRUUREQk5hYVhScElGQnZaQ0JEYjI1MGNtOXNiR1Z5TUI0WERUSTBNRFV3TVRFNE1EWXpOVm9YRFRNME1EUXkKT1RFNE1EWXpOVm93ZERFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01BazVETVJJd0VBWURWUVFIREFsRAphR0Z5Ykc5MGR [...]
    failurePolicy: Ignore
    sideEffects: None
    timeoutSeconds: 30
